# Sherlock

./: .gitignore  .version-tracking.md  CHANGELOG.MD  CLA.md  COMMERCIAL_LICENSE.md  Cargo.toml  DependencyCheck.sh  Dockerfile  GitLinks3.txt  Makefile  README.md  TRADEMARK.md  VERSIONS.md  WebInspector.sh  commentedOut_code.txt  gift_wrapper.sh  gobuster_output.txt  install-dev.sh  install.sh  sherlock-commented_out.txt  sherlock.py  sherlock.sh  springs  tempCodeRunnerFile.sh  uninstall.sh
.github/workflows/: build_release.yml  check-lockfile.yml  docker-image.yml  docker-publish.yml  release-binaries.yml  release-docker.yml  security-and-smoke.yml
Py/: requirements.txt  sherlock.py
legacy/: README.md  gift_wrapper.sh  install.sh
rsc/: README.MD  commentedOut_code.txt  notes_to_self.txt  resolvers.txt
scripts/: README.md  install.ps1  install.sh
src/: main.rs  model.rs  report.rs
src/tools/: mod.rs  tests.rs  tool_amass.rs  tool_gobuster.rs  tool_httpx.rs  tool_nmap.rs  tool_nuclei.rs
