[package]
name = "sherlock"
version = "2.0.1"
authors = ["Darth R3v4n"]
edition = "2021"
license = "GPL-3.0"
description = "Sherlock is a recon automation tool for web application assessments."
repository = "https://github.com/gbiagomba/sherlock"
homepage = "https://github.com/gbiagomba/sherlock"
readme = "README.md"
keywords = ["recon", "security", "automation", "web-app"]
categories = ["security", "network", "command-line-utilities"]
documentation = "https://docs.rs/sherlock"
rust-version = "1.90.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.39", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
time = { version = "0.3", features = ["formatting"] }
futures = "0.3"
regex = "1.10"
once_cell = "1.19"
which = "6.0"
quick-xml = "0.31"

[features]
default = []

[[bin]]
name = "sherlock"
path = "src/main.rs"

[profile.release]
opt-level = 3
